fix: 15063 - long bundle names are truncated in multi-ontology selection box
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@11336 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/OntologyBrowser/treeview.css
+++ b/extensions/SMWHalo/skins/OntologyBrowser/treeview.css
@@ -370,5 +370,5 @@ a.selectedSwitch {
 }
 
 .aoDataSourceSelector {
-	width: 20em;
+	width: 30em;
 }
